# collections-plus

./: README.md  pyproject.toml
src/collections_plus/: __init__.py  doubly_linked_list.py  example.py  linked_list.py
tests/: test_linked_list.py
